# scientific-review

./: .gitignore  README.md  paper.txt  pyproject.toml
data/: prepare_data.py
runs/baseline/: 20260323_204043_944469.json  20260325_175727_614224.json  20260325_175920_892257.json  20260401_141522_918291.json
runs/evaluation/: 20260401_133952_571277.json  20260401_142532_606060.json
runs/multiagent/: 20260323_203848_166732.json  20260323_214159_868590.json  20260323_214441_757067.json  20260323_215652_793202.json  20260324_105652_636442.json  20260324_164120_823441.json  20260325_175456_086335.json  20260326_231248_716949.json
runs/stability/: 20260401_133955_193543.json  20260401_142630_181054.json
scientific_review/: __init__.py  api.py  app.py  bot.py  client.py  config.py  logger.py  params.yaml  prompts.yaml  utils.py
scientific_review/agents/: __init__.py  agents.py  aggregator.py  criteria_agents.py  multiagent_pipeline.py  review_agents.py  state.py  tools.py
scientific_review/agents/criteria/: complexity.py  novelty.py  readability.py  scientificity.py
scientific_review/agents/review/: consistency.py  critic.py  draft.py  editor.py  final.py  review.py
scientific_review/api/: main.py
scientific_review/baseline/: __init__.py  baseline_pipeline.py
scientific_review/bot/: bot.py  client.py
scientific_review/bot/handlers/: start.py  states.py  upload.py
scientific_review/config/: models.yaml  settings.py
scientific_review/evaluation/: __init__.py  ablation.py  evaluator.py  judge.py  judge_pipeline.py  metrics.py  quality.py  stability.py
scientific_review/llm/: client.py
scientific_review/pipelines/: baseline.py  multiagent.py
scientific_review/prompts/: baseline.txt
scientific_review/prompts/agents/: complexity.txt  consistency.txt  critic.txt  draft_reviewer.txt  editor.txt  novelty.txt  (+4 more)
scientific_review/utils/: logger.py  params.py  parser.py  prompts.py  settings.py  utils.py
scripts/: run_ablation.py  run_baseline.py  run_evaluations.py  run_experiments.py  run_multiagent.py  run_quality.py  run_stability.py
