[project]
name = "scientific_review"
version = "1.0.0"
description = "Сравнительный анализ мультиагентной системы и большой языковой модели в задаче автоматического рецензирования научных текстов"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "apache 2.0"}
requires-python = ">=3.10,<3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langgraph (>=1.1.3,<2.0.0)",
    "aiogram (>=3.26.0,<4.0.0)",
    "fastapi (>=0.135.1,<0.136.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
