[project]
name = "scientific_review"
version = "1.0.0"
description = "Сравнительный анализ мультиагентной системы и большой языковой модели в задаче автоматического рецензирования научных текстов"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
license = {text = "apache 2.0"}
requires-python = ">=3.11,<3.15"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langgraph (>=1.1.3,<2.0.0)",
    "aiogram (>=3.26.0,<4.0.0)",
    "fastapi (>=0.135.1,<0.136.0)",
    "langchain (>=1.2.13,<2.0.0)",
    "langchain-core (>=1.2.22,<2.0.0)",
    "numpy (>=2.4.3,<3.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
